feat(docs): fixed swagger error
